--- a/css/asdf.css
+++ b/css/asdf.css
@@ -14,3 +14,9 @@ body{
     width: 90%;
     margin: 0 auto;
 }
+.red{
+    color: rgba(204, 28, 28, 0.842);
+}
+.blue{
+    color: rgba(0, 25, 252, 0.842);
+}
